--- a/.github/workflows/push-to-another-repo.yml
+++ b/.github/workflows/push-to-another-repo.yml
@@ -3,7 +3,7 @@ name: Push to Another Repository
 on:
   push:
     branches:
-      - main  # 触发分支（按需修改）
+      - main  # 触发分支
 
 jobs:
   push:
@@ -16,10 +16,10 @@ jobs:
       # 2. 配置 Git 用户信息（可选）
       - name: Set Git user
         run: |
-          git config --global user.name "zhoudq"
-          git config --global user.email "zhoudq@cn.ibm.com"
+          git config --global user.name "Your Name"
+          git config --global user.email "your-email@example.com"
 
-      # 3. 添加目标仓库为远程仓库
+      # 3. 添加目标仓库为远程仓库（使用 PAT 认证）
       - name: Add target repository as remote
         run: |
           git remote add target https://${{ secrets.TARGET_REPO_TOKEN }}@github.com/${{ secrets.TARGET_REPO_OWNER }}/${{ secrets.TARGET_REPO_NAME }}.git
@@ -27,6 +27,4 @@ jobs:
       # 4. 推送代码到目标仓库
       - name: Push to target repository
         run: |
-          git push target main  # 推送 main 分支（按需修改）
-        env:
-          GITHUB_TOKEN: ${{ secrets.TARGET_REPO_TOKEN }}  # 如果需要额外权限
+          git push target main  # 推送 main 分支
