--- a/.github/workflows/push-to-another-repo.yml
+++ b/.github/workflows/push-to-another-repo.yml
@@ -12,28 +12,28 @@ jobs:
       # 1. 检出源代码
       - name: Checkout source code
         uses: actions/checkout@v4
-        
+
       # 2. 测试 PAT 是否有效
-      - name: Test PAT
+      - name: Test PAT (API)
         run: |
           curl -s -o /dev/null -w "%{http_code}" \
             -H "Authorization: token ${{ secrets.TARGET_REPO_TOKEN }}" \
             https://api.github.com/repos/${{ secrets.TARGET_REPO_OWNER }}/${{ secrets.TARGET_REPO_NAME }}
           echo "HTTP Status Code: $?"
-        
-      # 3. 添加目标仓库为远程仓库
+
+      # 3. 添加目标仓库为远程仓库（使用 HTTPS + PAT）
       - name: Add target repository as remote
         run: |
           git remote add target https://${{ secrets.TARGET_REPO_TOKEN }}@github.com/${{ secrets.TARGET_REPO_OWNER }}/${{ secrets.TARGET_REPO_NAME }}.git
 
-      # 4. 推送代码到目标仓库
-      - name: Push to target repository
+      # 4. 推送代码到目标仓库（启用调试）
+      - name: Push to target repository (Debug)
+        env:
+          GIT_TRACE: 1
+          GIT_CURL_VERBOSE: 1
         run: |
-          set -x
           git push target main || {
             echo "Push failed. Debug info:";
             git remote -v;
-            git status;
             exit 1;
           }
-          set +x
